@@ -7,6 +7,7 @@
 - Fixed a problem with bottom bulk action on "Add-ons" tab.
 - Fixed a problem with double cancellation emails.
 - Improved the "app_my_appointments" shortcode and added message when we have no appointments.
+- Removed DateTime::createFromFormat() usage to be compatible with PHP 5.2
 
 2018-xx-xx - 2.2.7
 -------------------------------
